@@ -25,11 +25,10 @@ import org.apache.kafka.image.MetadataImage;
 import org.junit.jupiter.api.Test;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 
-import static org.apache.kafka.common.utils.Utils.mkSet;
 import static org.apache.kafka.coordinator.group.AssignmentTestUtil.mkAssignment;
 import static org.apache.kafka.coordinator.group.AssignmentTestUtil.mkTopicAssignment;
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -59,7 +58,7 @@ public class ShareGroupMemberTest {
         assertEquals("rack-id", member.rackId());
         assertEquals("client-id", member.clientId());
         assertEquals("hostname", member.clientHost());
-        assertEquals(mkSet("bar", "foo"), member.subscribedTopicNames());
+        assertEquals(Set.of("bar", "foo"), member.subscribedTopicNames());
         assertEquals(mkAssignment(mkTopicAssignment(topicId1, 1, 2, 3)), member.assignedPartitions());
     }
 
@@ -117,13 +116,13 @@ public class ShareGroupMemberTest {
 
         updatedMember = new ShareGroupMember.Builder(member)
             .maybeUpdateRackId(Optional.of("new-rack-id"))
-            .maybeUpdateSubscribedTopicNames(Optional.of(Collections.singletonList("zar")))
+            .maybeUpdateSubscribedTopicNames(Optional.of(List.of("zar")))
             .build();
 
         assertNull(member.instanceId());
         assertEquals("new-rack-id", updatedMember.rackId());
         // Names are sorted.
-        assertEquals(mkSet("zar"), updatedMember.subscribedTopicNames());
+        assertEquals(Set.of("zar"), updatedMember.subscribedTopicNames());
     }
 
     @Test
@@ -142,7 +141,7 @@ public class ShareGroupMemberTest {
         assertEquals("rack-id", member.rackId());
         assertEquals("client-id", member.clientId());
         assertEquals("host-id", member.clientHost());
-        assertEquals(mkSet("bar", "foo"), member.subscribedTopicNames());
+        assertEquals(Set.of("bar", "foo"), member.subscribedTopicNames());
     }
 
     @Test
@@ -180,7 +179,7 @@ public class ShareGroupMemberTest {
             .setSubscribedTopicNames(subscribedTopicNames)
             .setAssignment(
                 new ShareGroupDescribeResponseData.Assignment()
-                    .setTopicPartitions(Collections.singletonList(new ShareGroupDescribeResponseData.TopicPartitions()
+                    .setTopicPartitions(List.of(new ShareGroupDescribeResponseData.TopicPartitions()
                         .setTopicId(topicId1)
                         .setTopicName("topic1")
                         .setPartitions(assignedPartitions)
