@@ -19,14 +19,15 @@ package org.apache.kafka.controller;
 
 import org.apache.kafka.clients.admin.FeatureUpdate;
 import org.apache.kafka.common.metadata.FeatureLevelRecord;
-import org.apache.kafka.common.metadata.ZkMigrationStateRecord;
 import org.apache.kafka.common.protocol.Errors;
 import org.apache.kafka.common.requests.ApiError;
 import org.apache.kafka.common.utils.LogContext;
 import org.apache.kafka.metadata.FinalizedControllerFeatures;
 import org.apache.kafka.metadata.VersionRange;
-import org.apache.kafka.metadata.migration.ZkMigrationState;
 import org.apache.kafka.server.common.ApiMessageAndVersion;
+import org.apache.kafka.server.common.EligibleLeaderReplicasVersion;
+import org.apache.kafka.server.common.Feature;
+import org.apache.kafka.server.common.KRaftVersion;
 import org.apache.kafka.server.common.MetadataVersion;
 import org.apache.kafka.server.mutable.BoundedList;
 import org.apache.kafka.timeline.SnapshotRegistry;
@@ -43,7 +44,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Optional;
-import java.util.TreeMap;
 import java.util.function.Consumer;
 
 import static org.apache.kafka.common.metadata.MetadataRecordType.FEATURE_LEVEL_RECORD;
@@ -55,8 +55,6 @@ public class FeatureControlManager {
         private LogContext logContext = null;
         private SnapshotRegistry snapshotRegistry = null;
         private QuorumFeatures quorumFeatures = null;
-        private MetadataVersion metadataVersion = MetadataVersion.latestProduction();
-        private MetadataVersion minimumBootstrapVersion = MetadataVersion.MINIMUM_BOOTSTRAP_VERSION;
         private ClusterFeatureSupportDescriber clusterSupportDescriber = new ClusterFeatureSupportDescriber() {
             @Override
             public Iterator<Entry<Integer, Map<String, VersionRange>>> brokerSupported() {
@@ -84,16 +82,6 @@ public class FeatureControlManager {
             return this;
         }
 
-        Builder setMetadataVersion(MetadataVersion metadataVersion) {
-            this.metadataVersion = metadataVersion;
-            return this;
-        }
-
-        Builder setMinimumBootstrapVersion(MetadataVersion minimumBootstrapVersion) {
-            this.minimumBootstrapVersion = minimumBootstrapVersion;
-            return this;
-        }
-
         Builder setClusterFeatureSupportDescriber(ClusterFeatureSupportDescriber clusterSupportDescriber) {
             this.clusterSupportDescriber = clusterSupportDescriber;
             return this;
@@ -105,16 +93,14 @@ public class FeatureControlManager {
             if (quorumFeatures == null) {
                 Map<String, VersionRange> localSupportedFeatures = new HashMap<>();
                 localSupportedFeatures.put(MetadataVersion.FEATURE_NAME, VersionRange.of(
-                        MetadataVersion.MINIMUM_KRAFT_VERSION.featureLevel(),
+                        MetadataVersion.MINIMUM_VERSION.featureLevel(),
                         MetadataVersion.latestProduction().featureLevel()));
-                quorumFeatures = new QuorumFeatures(0, localSupportedFeatures, Collections.singletonList(0));
+                quorumFeatures = new QuorumFeatures(0, localSupportedFeatures, List.of(0));
             }
             return new FeatureControlManager(
                 logContext,
                 quorumFeatures,
                 snapshotRegistry,
-                metadataVersion,
-                minimumBootstrapVersion,
                 clusterSupportDescriber
             );
         }
@@ -135,17 +121,7 @@ public class FeatureControlManager {
     /**
      * The current metadata version
      */
-    private final TimelineObject<MetadataVersion> metadataVersion;
-
-    /**
-     * The current ZK migration state
-     */
-    private final TimelineObject<ZkMigrationState> migrationControlState;
-
-    /**
-     * The minimum bootstrap version that we can't downgrade before.
-     */
-    private final MetadataVersion minimumBootstrapVersion;
+    private final TimelineObject<Optional<MetadataVersion>> metadataVersion;
 
     /**
      * Gives information about the supported versions in the cluster.
@@ -156,52 +132,61 @@ public class FeatureControlManager {
         LogContext logContext,
         QuorumFeatures quorumFeatures,
         SnapshotRegistry snapshotRegistry,
-        MetadataVersion metadataVersion,
-        MetadataVersion minimumBootstrapVersion,
         ClusterFeatureSupportDescriber clusterSupportDescriber
     ) {
         this.log = logContext.logger(FeatureControlManager.class);
         this.quorumFeatures = quorumFeatures;
         this.finalizedVersions = new TimelineHashMap<>(snapshotRegistry, 0);
-        this.metadataVersion = new TimelineObject<>(snapshotRegistry, metadataVersion);
-        this.minimumBootstrapVersion = minimumBootstrapVersion;
-        this.migrationControlState = new TimelineObject<>(snapshotRegistry, ZkMigrationState.NONE);
+        this.metadataVersion = new TimelineObject<>(snapshotRegistry, Optional.empty());
         this.clusterSupportDescriber = clusterSupportDescriber;
     }
 
-    ControllerResult<Map<String, ApiError>> updateFeatures(
+    ControllerResult<ApiError> updateFeatures(
         Map<String, Short> updates,
         Map<String, FeatureUpdate.UpgradeType> upgradeTypes,
         boolean validateOnly
     ) {
-        TreeMap<String, ApiError> results = new TreeMap<>();
         List<ApiMessageAndVersion> records =
                 BoundedList.newArrayBacked(MAX_RECORDS_PER_USER_OP);
+
+        Map<String, Short> proposedUpdatedVersions = new HashMap<>(finalizedVersions);
+        proposedUpdatedVersions.put(MetadataVersion.FEATURE_NAME, metadataVersionOrThrow().featureLevel());
+        proposedUpdatedVersions.putAll(updates);
+
         for (Entry<String, Short> entry : updates.entrySet()) {
-            results.put(entry.getKey(), updateFeature(entry.getKey(), entry.getValue(),
-                upgradeTypes.getOrDefault(entry.getKey(), FeatureUpdate.UpgradeType.UPGRADE), records));
+            ApiError error = updateFeature(entry.getKey(), entry.getValue(),
+                upgradeTypes.getOrDefault(entry.getKey(), FeatureUpdate.UpgradeType.UPGRADE), records, proposedUpdatedVersions);
+            if (!error.error().equals(Errors.NONE)) {
+                return ControllerResult.of(List.of(), error);
+            }
         }
 
         if (validateOnly) {
-            return ControllerResult.of(Collections.emptyList(), results);
+            return ControllerResult.of(List.of(), ApiError.NONE);
         } else {
-            return ControllerResult.atomicOf(records, results);
+            return ControllerResult.atomicOf(records, ApiError.NONE);
         }
     }
 
-    MetadataVersion metadataVersion() {
+    Optional<MetadataVersion> metadataVersion() {
         return metadataVersion.get();
     }
 
-    ZkMigrationState zkMigrationState() {
-        return migrationControlState.get();
+    MetadataVersion metadataVersionOrThrow() {
+        return metadataVersionOrThrow(SnapshotRegistry.LATEST_EPOCH);
+    }
+
+    private MetadataVersion metadataVersionOrThrow(long epoch) {
+        return metadataVersion.get(epoch).orElseThrow(() ->
+            new IllegalStateException("Unknown metadata version for FeatureControlManager"));
     }
 
     private ApiError updateFeature(
         String featureName,
         short newVersion,
         FeatureUpdate.UpgradeType upgradeType,
-        List<ApiMessageAndVersion> records
+        List<ApiMessageAndVersion> records,
+        Map<String, Short> proposedUpdatedVersions
     ) {
         if (upgradeType.equals(FeatureUpdate.UpgradeType.UNKNOWN)) {
             return invalidUpdateVersion(featureName, newVersion,
@@ -210,7 +195,7 @@ public class FeatureControlManager {
 
         final short currentVersion;
         if (featureName.equals(MetadataVersion.FEATURE_NAME)) {
-            currentVersion = metadataVersion.get().featureLevel();
+            currentVersion = metadataVersionOrThrow().featureLevel();
         } else {
             currentVersion = finalizedVersions.getOrDefault(featureName, (short) 0);
         }
@@ -241,6 +226,15 @@ public class FeatureControlManager {
             // Perform additional checks if we're updating metadata.version
             return updateMetadataVersion(newVersion, upgradeType.equals(FeatureUpdate.UpgradeType.UNSAFE_DOWNGRADE), records::add);
         } else {
+            // Validate dependencies for features that are not metadata.version
+            try {
+                Feature.validateVersion(
+                    // Allow unstable feature versions is true because the version range is already checked above.
+                    Feature.featureFromName(featureName).fromFeatureLevel(newVersion, true),
+                    proposedUpdatedVersions);
+            } catch (IllegalArgumentException e) {
+                return invalidUpdateVersion(featureName, newVersion, e.getMessage());
+            }
             records.add(new ApiMessageAndVersion(new FeatureLevelRecord().
                 setName(featureName).
                 setFeatureLevel(newVersion), (short) 0));
@@ -270,7 +264,7 @@ public class FeatureControlManager {
         String registrationSuffix = "";
         HashSet<Integer> foundControllers = new HashSet<>();
         foundControllers.add(quorumFeatures.nodeId());
-        if (metadataVersion.get().isControllerRegistrationSupported()) {
+        if (metadataVersionOrThrow().isControllerRegistrationSupported()) {
             for (Iterator<Entry<Integer, Map<String, VersionRange>>> iter =
                  clusterSupportDescriber.controllerSupported();
                  iter.hasNext(); ) {
@@ -317,27 +311,15 @@ public class FeatureControlManager {
         boolean allowUnsafeDowngrade,
         Consumer<ApiMessageAndVersion> recordConsumer
     ) {
-        MetadataVersion currentVersion = metadataVersion();
-        ZkMigrationState zkMigrationState = zkMigrationState();
+        MetadataVersion currentVersion = metadataVersionOrThrow();
         final MetadataVersion newVersion;
         try {
             newVersion = MetadataVersion.fromFeatureLevel(newVersionLevel);
         } catch (IllegalArgumentException e) {
-            return invalidMetadataVersion(newVersionLevel, "Unknown metadata.version.");
+            return invalidMetadataVersion(newVersionLevel, "Valid versions are from "
+                + MetadataVersion.MINIMUM_VERSION.featureLevel() + " to " + MetadataVersion.latestTesting().featureLevel() + ".");
         }
 
-        // Don't allow metadata.version changes while we're migrating
-        if (zkMigrationState.inProgress()) {
-            return invalidMetadataVersion(newVersionLevel, "Unable to modify metadata.version while a " +
-                "ZK migration is in progress.");
-        }
-
-        // We cannot set a version earlier than IBP_3_3_IV0, since that was the first version that contained
-        // FeatureLevelRecord itself.
-        if (newVersion.isLessThan(minimumBootstrapVersion)) {
-            return invalidMetadataVersion(newVersionLevel, "Unable to set a metadata.version less than " +
-                    minimumBootstrapVersion);
-        }
         if (newVersion.isLessThan(currentVersion)) {
             // This is a downgrade
             boolean metadataChanged = MetadataVersion.checkIfMetadataChanged(currentVersion, newVersion);
@@ -372,21 +354,11 @@ public class FeatureControlManager {
 
     FinalizedControllerFeatures finalizedFeatures(long epoch) {
         Map<String, Short> features = new HashMap<>();
-        features.put(MetadataVersion.FEATURE_NAME, metadataVersion.get(epoch).featureLevel());
+        features.put(MetadataVersion.FEATURE_NAME, metadataVersionOrThrow(epoch).featureLevel());
         for (Entry<String, Short> entry : finalizedVersions.entrySet(epoch)) {
             features.put(entry.getKey(), entry.getValue());
         }
         return new FinalizedControllerFeatures(features, epoch);
-    }
-
-    /**
-     * Tests if the controller should be preventing metadata updates due to being in the PRE_MIGRATION
-     * state. If the controller does not yet support migrations (before 3.4-IV0), then the migration state
-     * will be NONE and this will return false. Once the controller has been upgraded to a version that supports
-     * migrations, then this method checks if the migration state is equal to PRE_MIGRATION.
-     */
-    boolean inPreMigrationMode() {
-        return migrationControlState.get().equals(ZkMigrationState.PRE_MIGRATION);
     }
 
     public void replay(FeatureLevelRecord record) {
@@ -397,8 +369,12 @@ public class FeatureControlManager {
         }
         if (record.name().equals(MetadataVersion.FEATURE_NAME)) {
             MetadataVersion mv = MetadataVersion.fromFeatureLevel(record.featureLevel());
-            metadataVersion.set(mv);
+            metadataVersion.set(Optional.of(mv));
             log.info("Replayed a FeatureLevelRecord setting metadata.version to {}", mv);
+        } else if (record.name().equals(KRaftVersion.FEATURE_NAME)) {
+            // KAFKA-18979 - Skip any feature level record for kraft.version. This has two benefits:
+            // 1. It removes from snapshots any FeatureLevelRecord for kraft.version that was incorrectly written to the log
+            // 2. Allows ApiVersions to report the correct finalized kraft.version
         } else {
             if (record.featureLevel() == 0) {
                 finalizedVersions.remove(record.name());
@@ -411,20 +387,12 @@ public class FeatureControlManager {
         }
     }
 
-    public void replay(ZkMigrationStateRecord record) {
-        ZkMigrationState newState = ZkMigrationState.of(record.zkMigrationState());
-        ZkMigrationState previousState = migrationControlState.get();
-        if (previousState.equals(newState)) {
-            log.debug("Replayed a ZkMigrationStateRecord which did not alter the state from {}.",
-                    previousState);
-        } else {
-            migrationControlState.set(newState);
-            log.info("Replayed a ZkMigrationStateRecord changing the migration state from {} to {}.",
-                    previousState, newState);
-        }
-    }
-
     boolean isControllerId(int nodeId) {
         return quorumFeatures.isControllerId(nodeId);
+    }
+
+    boolean isElrFeatureEnabled() {
+        return finalizedVersions.getOrDefault(EligibleLeaderReplicasVersion.FEATURE_NAME, (short) 0) >=
+            EligibleLeaderReplicasVersion.ELRV_1.featureLevel();
     }
 }
