@@ -35,8 +35,8 @@ import java.util.Objects;
  */
 public final class ClusterImage {
     public static final ClusterImage EMPTY = new ClusterImage(
-            Collections.emptyMap(),
-            Collections.emptyMap());
+            Map.of(),
+            Map.of());
 
     private final Map<Integer, BrokerRegistration> brokers;
 
@@ -66,8 +66,12 @@ public final class ClusterImage {
         return controllers;
     }
 
-    public boolean containsBroker(int brokerId) {
-        return brokers.containsKey(brokerId);
+    public long brokerEpoch(int brokerId) {
+        BrokerRegistration brokerRegistration = broker(brokerId);
+        if (brokerRegistration == null) {
+            return -1L;
+        }
+        return brokerRegistration.epoch();
     }
 
     public void write(ImageWriter writer, ImageWriterOptions options) {
@@ -92,8 +96,7 @@ public final class ClusterImage {
 
     @Override
     public boolean equals(Object o) {
-        if (!(o instanceof ClusterImage)) return false;
-        ClusterImage other = (ClusterImage) o;
+        if (!(o instanceof ClusterImage other)) return false;
         return brokers.equals(other.brokers) &&
             controllers.equals(other.controllers);
     }
