@@ -32,9 +32,7 @@ import java.io.IOException;
 import java.nio.channels.FileChannel;
 import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
-import java.util.Collections;
 import java.util.List;
-import java.util.OptionalLong;
 
 import static org.apache.kafka.raft.KafkaRaftClient.MAX_BATCH_SIZE_BYTES;
 
@@ -62,11 +60,11 @@ public class BatchFileWriter implements AutoCloseable {
     }
 
     public void append(ApiMessageAndVersion apiMessageAndVersion) {
-        batchAccumulator.append(0, Collections.singletonList(apiMessageAndVersion), OptionalLong.empty(), false);
+        batchAccumulator.append(0, List.of(apiMessageAndVersion), false);
     }
 
     public void append(List<ApiMessageAndVersion> messageBatch) {
-        batchAccumulator.append(0, messageBatch, OptionalLong.empty(), false);
+        batchAccumulator.append(0, messageBatch, false);
     }
 
     public void close() throws IOException {
@@ -95,6 +93,7 @@ public class BatchFileWriter implements AutoCloseable {
             0,
             Integer.MAX_VALUE,
             MAX_BATCH_SIZE_BYTES,
+            Integer.MAX_VALUE,
             new BatchMemoryPool(5, MAX_BATCH_SIZE_BYTES),
             time,
             Compression.NONE,
