@@ -26,7 +26,7 @@ import org.apache.kafka.common.quota.ClientQuotaEntity;
 import org.apache.kafka.common.requests.ApiError;
 import org.apache.kafka.metadata.RecordTestUtils;
 import org.apache.kafka.server.common.ApiMessageAndVersion;
-import org.apache.kafka.server.config.QuotaConfigs;
+import org.apache.kafka.server.config.QuotaConfig;
 
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.Timeout;
@@ -68,11 +68,11 @@ public class ClientQuotaControlManagerTest {
         assertInvalidEntity(manager, entity(ClientQuotaEntity.CLIENT_ID, "user-1", ClientQuotaEntity.IP, "1.2.3.4"));
 
         // Empty
-        assertInvalidEntity(manager, new ClientQuotaEntity(Collections.emptyMap()));
+        assertInvalidEntity(manager, new ClientQuotaEntity(Map.of()));
     }
 
     private void assertInvalidEntity(ClientQuotaControlManager manager, ClientQuotaEntity entity) {
-        assertInvalidQuota(manager, entity, quotas(QuotaConfigs.PRODUCER_BYTE_RATE_OVERRIDE_CONFIG, 10000.0));
+        assertInvalidQuota(manager, entity, quotas(QuotaConfig.PRODUCER_BYTE_RATE_OVERRIDE_CONFIG, 10000.0));
     }
 
     @Test
@@ -81,10 +81,10 @@ public class ClientQuotaControlManagerTest {
         ClientQuotaEntity entity = entity(ClientQuotaEntity.USER, "user-1");
 
         // Invalid + valid keys
-        assertInvalidQuota(manager, entity, quotas("not.a.quota.key", 0.0, QuotaConfigs.REQUEST_PERCENTAGE_OVERRIDE_CONFIG, 99.9));
+        assertInvalidQuota(manager, entity, quotas("not.a.quota.key", 0.0, QuotaConfig.REQUEST_PERCENTAGE_OVERRIDE_CONFIG, 99.9));
 
         // Valid + invalid keys
-        assertInvalidQuota(manager, entity, quotas(QuotaConfigs.REQUEST_PERCENTAGE_OVERRIDE_CONFIG, 99.9, "not.a.quota.key", 0.0));
+        assertInvalidQuota(manager, entity, quotas(QuotaConfig.REQUEST_PERCENTAGE_OVERRIDE_CONFIG, 99.9, "not.a.quota.key", 0.0));
 
         // Null key
         assertInvalidQuota(manager, entity, quotas(null, 99.9));
@@ -106,44 +106,44 @@ public class ClientQuotaControlManagerTest {
         List<ClientQuotaAlteration> alters = new ArrayList<>();
 
         // Add one quota
-        entityQuotaToAlterations(userEntity, quotas(QuotaConfigs.PRODUCER_BYTE_RATE_OVERRIDE_CONFIG, 10000.0), alters::add);
+        entityQuotaToAlterations(userEntity, quotas(QuotaConfig.PRODUCER_BYTE_RATE_OVERRIDE_CONFIG, 10000.0), alters::add);
         alterQuotas(alters, manager);
         assertEquals(1, manager.clientQuotaData.get(userEntity).size());
-        assertEquals(10000.0, manager.clientQuotaData.get(userEntity).get(QuotaConfigs.PRODUCER_BYTE_RATE_OVERRIDE_CONFIG), 1e-6);
+        assertEquals(10000.0, manager.clientQuotaData.get(userEntity).get(QuotaConfig.PRODUCER_BYTE_RATE_OVERRIDE_CONFIG), 1e-6);
 
         // Replace it and add another
         alters.clear();
         entityQuotaToAlterations(userEntity, quotas(
-            QuotaConfigs.PRODUCER_BYTE_RATE_OVERRIDE_CONFIG, 10001.0,
-            QuotaConfigs.CONSUMER_BYTE_RATE_OVERRIDE_CONFIG, 20000.0
+            QuotaConfig.PRODUCER_BYTE_RATE_OVERRIDE_CONFIG, 10001.0,
+            QuotaConfig.CONSUMER_BYTE_RATE_OVERRIDE_CONFIG, 20000.0
         ), alters::add);
         alterQuotas(alters, manager);
         assertEquals(2, manager.clientQuotaData.get(userEntity).size());
-        assertEquals(10001.0, manager.clientQuotaData.get(userEntity).get(QuotaConfigs.PRODUCER_BYTE_RATE_OVERRIDE_CONFIG), 1e-6);
-        assertEquals(20000.0, manager.clientQuotaData.get(userEntity).get(QuotaConfigs.CONSUMER_BYTE_RATE_OVERRIDE_CONFIG), 1e-6);
+        assertEquals(10001.0, manager.clientQuotaData.get(userEntity).get(QuotaConfig.PRODUCER_BYTE_RATE_OVERRIDE_CONFIG), 1e-6);
+        assertEquals(20000.0, manager.clientQuotaData.get(userEntity).get(QuotaConfig.CONSUMER_BYTE_RATE_OVERRIDE_CONFIG), 1e-6);
 
         // Remove one of the quotas, the other remains
         alters.clear();
         entityQuotaToAlterations(userEntity, quotas(
-            QuotaConfigs.PRODUCER_BYTE_RATE_OVERRIDE_CONFIG, null
+            QuotaConfig.PRODUCER_BYTE_RATE_OVERRIDE_CONFIG, null
         ), alters::add);
         alterQuotas(alters, manager);
         assertEquals(1, manager.clientQuotaData.get(userEntity).size());
-        assertEquals(20000.0, manager.clientQuotaData.get(userEntity).get(QuotaConfigs.CONSUMER_BYTE_RATE_OVERRIDE_CONFIG), 1e-6);
+        assertEquals(20000.0, manager.clientQuotaData.get(userEntity).get(QuotaConfig.CONSUMER_BYTE_RATE_OVERRIDE_CONFIG), 1e-6);
 
         // Remove non-existent quota, no change
         alters.clear();
         entityQuotaToAlterations(userEntity, quotas(
-                QuotaConfigs.REQUEST_PERCENTAGE_OVERRIDE_CONFIG, null
+                QuotaConfig.REQUEST_PERCENTAGE_OVERRIDE_CONFIG, null
         ), alters::add);
         alterQuotas(alters, manager);
         assertEquals(1, manager.clientQuotaData.get(userEntity).size());
-        assertEquals(20000.0, manager.clientQuotaData.get(userEntity).get(QuotaConfigs.CONSUMER_BYTE_RATE_OVERRIDE_CONFIG), 1e-6);
+        assertEquals(20000.0, manager.clientQuotaData.get(userEntity).get(QuotaConfig.CONSUMER_BYTE_RATE_OVERRIDE_CONFIG), 1e-6);
 
         // All quotas removed, we should cleanup the map
         alters.clear();
         entityQuotaToAlterations(userEntity, quotas(
-                QuotaConfigs.CONSUMER_BYTE_RATE_OVERRIDE_CONFIG, null
+                QuotaConfig.CONSUMER_BYTE_RATE_OVERRIDE_CONFIG, null
         ), alters::add);
         alterQuotas(alters, manager);
         assertFalse(manager.clientQuotaData.containsKey(userEntity));
@@ -151,7 +151,7 @@ public class ClientQuotaControlManagerTest {
         // Remove non-existent quota, again no change
         alters.clear();
         entityQuotaToAlterations(userEntity, quotas(
-                QuotaConfigs.CONSUMER_BYTE_RATE_OVERRIDE_CONFIG, null
+                QuotaConfig.CONSUMER_BYTE_RATE_OVERRIDE_CONFIG, null
         ), alters::add);
         alterQuotas(alters, manager);
         assertFalse(manager.clientQuotaData.containsKey(userEntity));
@@ -159,17 +159,17 @@ public class ClientQuotaControlManagerTest {
         // Mixed update
         alters.clear();
         Map<String, Double> quotas = new HashMap<>(4);
-        quotas.put(QuotaConfigs.REQUEST_PERCENTAGE_OVERRIDE_CONFIG, 99.0);
-        quotas.put(QuotaConfigs.CONTROLLER_MUTATION_RATE_OVERRIDE_CONFIG, null);
-        quotas.put(QuotaConfigs.PRODUCER_BYTE_RATE_OVERRIDE_CONFIG, 10002.0);
-        quotas.put(QuotaConfigs.CONSUMER_BYTE_RATE_OVERRIDE_CONFIG, 20001.0);
+        quotas.put(QuotaConfig.REQUEST_PERCENTAGE_OVERRIDE_CONFIG, 99.0);
+        quotas.put(QuotaConfig.CONTROLLER_MUTATION_RATE_OVERRIDE_CONFIG, null);
+        quotas.put(QuotaConfig.PRODUCER_BYTE_RATE_OVERRIDE_CONFIG, 10002.0);
+        quotas.put(QuotaConfig.CONSUMER_BYTE_RATE_OVERRIDE_CONFIG, 20001.0);
 
         entityQuotaToAlterations(userEntity, quotas, alters::add);
         alterQuotas(alters, manager);
         assertEquals(3, manager.clientQuotaData.get(userEntity).size());
-        assertEquals(20001.0, manager.clientQuotaData.get(userEntity).get(QuotaConfigs.CONSUMER_BYTE_RATE_OVERRIDE_CONFIG), 1e-6);
-        assertEquals(10002.0, manager.clientQuotaData.get(userEntity).get(QuotaConfigs.PRODUCER_BYTE_RATE_OVERRIDE_CONFIG), 1e-6);
-        assertEquals(99.0, manager.clientQuotaData.get(userEntity).get(QuotaConfigs.REQUEST_PERCENTAGE_OVERRIDE_CONFIG), 1e-6);
+        assertEquals(20001.0, manager.clientQuotaData.get(userEntity).get(QuotaConfig.CONSUMER_BYTE_RATE_OVERRIDE_CONFIG), 1e-6);
+        assertEquals(10002.0, manager.clientQuotaData.get(userEntity).get(QuotaConfig.PRODUCER_BYTE_RATE_OVERRIDE_CONFIG), 1e-6);
+        assertEquals(99.0, manager.clientQuotaData.get(userEntity).get(QuotaConfig.REQUEST_PERCENTAGE_OVERRIDE_CONFIG), 1e-6);
     }
 
     @Test
@@ -178,27 +178,27 @@ public class ClientQuotaControlManagerTest {
 
         Map<ClientQuotaEntity, Map<String, Double>> quotasToTest = new HashMap<>();
         quotasToTest.put(userClientEntity("user-1", "client-id-1"),
-                quotas(QuotaConfigs.REQUEST_PERCENTAGE_OVERRIDE_CONFIG, 50.50));
+                quotas(QuotaConfig.REQUEST_PERCENTAGE_OVERRIDE_CONFIG, 50.50));
         quotasToTest.put(userClientEntity("user-2", "client-id-1"),
-                quotas(QuotaConfigs.REQUEST_PERCENTAGE_OVERRIDE_CONFIG, 51.51));
+                quotas(QuotaConfig.REQUEST_PERCENTAGE_OVERRIDE_CONFIG, 51.51));
         quotasToTest.put(userClientEntity("user-3", "client-id-2"),
-                quotas(QuotaConfigs.REQUEST_PERCENTAGE_OVERRIDE_CONFIG, 52.52));
+                quotas(QuotaConfig.REQUEST_PERCENTAGE_OVERRIDE_CONFIG, 52.52));
         quotasToTest.put(userClientEntity(null, "client-id-1"),
-                quotas(QuotaConfigs.REQUEST_PERCENTAGE_OVERRIDE_CONFIG, 53.53));
+                quotas(QuotaConfig.REQUEST_PERCENTAGE_OVERRIDE_CONFIG, 53.53));
         quotasToTest.put(userClientEntity("user-1", null),
-                quotas(QuotaConfigs.REQUEST_PERCENTAGE_OVERRIDE_CONFIG, 54.54));
+                quotas(QuotaConfig.REQUEST_PERCENTAGE_OVERRIDE_CONFIG, 54.54));
         quotasToTest.put(userClientEntity("user-3", null),
-                quotas(QuotaConfigs.REQUEST_PERCENTAGE_OVERRIDE_CONFIG, 55.55));
+                quotas(QuotaConfig.REQUEST_PERCENTAGE_OVERRIDE_CONFIG, 55.55));
         quotasToTest.put(userEntity("user-1"),
-                quotas(QuotaConfigs.REQUEST_PERCENTAGE_OVERRIDE_CONFIG, 56.56));
+                quotas(QuotaConfig.REQUEST_PERCENTAGE_OVERRIDE_CONFIG, 56.56));
         quotasToTest.put(userEntity("user-2"),
-                quotas(QuotaConfigs.REQUEST_PERCENTAGE_OVERRIDE_CONFIG, 57.57));
+                quotas(QuotaConfig.REQUEST_PERCENTAGE_OVERRIDE_CONFIG, 57.57));
         quotasToTest.put(userEntity("user-3"),
-                quotas(QuotaConfigs.REQUEST_PERCENTAGE_OVERRIDE_CONFIG, 58.58));
+                quotas(QuotaConfig.REQUEST_PERCENTAGE_OVERRIDE_CONFIG, 58.58));
         quotasToTest.put(userEntity(null),
-                quotas(QuotaConfigs.REQUEST_PERCENTAGE_OVERRIDE_CONFIG, 59.59));
+                quotas(QuotaConfig.REQUEST_PERCENTAGE_OVERRIDE_CONFIG, 59.59));
         quotasToTest.put(clientEntity("client-id-2"),
-                quotas(QuotaConfigs.REQUEST_PERCENTAGE_OVERRIDE_CONFIG, 60.60));
+                quotas(QuotaConfig.REQUEST_PERCENTAGE_OVERRIDE_CONFIG, 60.60));
 
         List<ClientQuotaAlteration> alters = new ArrayList<>();
         quotasToTest.forEach((entity, quota) -> entityQuotaToAlterations(entity, quota, alters::add));
@@ -323,8 +323,8 @@ public class ClientQuotaControlManagerTest {
 
     @Test
     public void testConfigKeysForEntityTypeWithUser() {
-        testConfigKeysForEntityType(Collections.singletonList(ClientQuotaEntity.USER),
-            Arrays.asList(
+        testConfigKeysForEntityType(List.of(ClientQuotaEntity.USER),
+            List.of(
                 "producer_byte_rate",
                 "consumer_byte_rate",
                 "controller_mutation_rate",
@@ -334,8 +334,8 @@ public class ClientQuotaControlManagerTest {
 
     @Test
     public void testConfigKeysForEntityTypeWithClientId() {
-        testConfigKeysForEntityType(Collections.singletonList(ClientQuotaEntity.CLIENT_ID),
-            Arrays.asList(
+        testConfigKeysForEntityType(List.of(ClientQuotaEntity.CLIENT_ID),
+            List.of(
                 "producer_byte_rate",
                 "consumer_byte_rate",
                 "controller_mutation_rate",
@@ -345,8 +345,8 @@ public class ClientQuotaControlManagerTest {
 
     @Test
     public void testConfigKeysForEntityTypeWithUserAndClientId() {
-        testConfigKeysForEntityType(Arrays.asList(ClientQuotaEntity.CLIENT_ID, ClientQuotaEntity.USER),
-            Arrays.asList(
+        testConfigKeysForEntityType(List.of(ClientQuotaEntity.CLIENT_ID, ClientQuotaEntity.USER),
+            List.of(
                 "producer_byte_rate",
                 "consumer_byte_rate",
                 "controller_mutation_rate",
@@ -356,8 +356,8 @@ public class ClientQuotaControlManagerTest {
 
     @Test
     public void testConfigKeysForEntityTypeWithIp() {
-        testConfigKeysForEntityType(Collections.singletonList(ClientQuotaEntity.IP),
-            Collections.singletonList(
+        testConfigKeysForEntityType(List.of(ClientQuotaEntity.IP),
+            List.of(
                 "connection_creation_rate"
             ));
     }
@@ -386,20 +386,20 @@ public class ClientQuotaControlManagerTest {
 
     @Test
     public void testConfigKeysForEmptyEntity() {
-        testConfigKeysError(Collections.emptyList(),
+        testConfigKeysError(List.of(),
             new ApiError(Errors.INVALID_REQUEST, "Invalid empty client quota entity"));
     }
 
     @Test
     public void testConfigKeysForEntityTypeWithIpAndUser() {
-        testConfigKeysError(Arrays.asList(ClientQuotaEntity.IP, ClientQuotaEntity.USER),
+        testConfigKeysError(List.of(ClientQuotaEntity.IP, ClientQuotaEntity.USER),
             new ApiError(Errors.INVALID_REQUEST, "Invalid quota entity combination, IP entity should" +
                 "not be combined with User or ClientId"));
     }
 
     @Test
     public void testConfigKeysForEntityTypeWithIpAndClientId() {
-        testConfigKeysError(Arrays.asList(ClientQuotaEntity.IP, ClientQuotaEntity.CLIENT_ID),
+        testConfigKeysError(List.of(ClientQuotaEntity.IP, ClientQuotaEntity.CLIENT_ID),
             new ApiError(Errors.INVALID_REQUEST, "Invalid quota entity combination, IP entity should" +
                 "not be combined with User or ClientId"));
     }
@@ -410,7 +410,7 @@ public class ClientQuotaControlManagerTest {
 
     @Test
     public void testConfigKeysForUnresolvableIpEntity() {
-        testConfigKeysError(Collections.singletonMap(ClientQuotaEntity.IP, "example.invalid"),
+        testConfigKeysError(Map.of(ClientQuotaEntity.IP, "example.invalid"),
             new ApiError(Errors.INVALID_REQUEST, "example.invalid is not a valid IP or resolvable host."));
     }
 
@@ -427,7 +427,7 @@ public class ClientQuotaControlManagerTest {
     static {
         VALID_CLIENT_ID_QUOTA_KEYS = new HashMap<>();
         assertEquals(ApiError.NONE, ClientQuotaControlManager.configKeysForEntityType(
-                keysToEntity(Collections.singletonList(ClientQuotaEntity.CLIENT_ID)), VALID_CLIENT_ID_QUOTA_KEYS));
+                keysToEntity(List.of(ClientQuotaEntity.CLIENT_ID)), VALID_CLIENT_ID_QUOTA_KEYS));
     }
 
     @Test
