@@ -32,9 +32,9 @@ import org.junit.jupiter.api.Timeout;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
 import java.util.OptionalInt;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -47,7 +47,7 @@ public class ControllerRegistrationsPublisherTest {
     @Test
     public void testInitialControllers() {
         ControllerRegistrationsPublisher publisher = new ControllerRegistrationsPublisher();
-        assertEquals(Collections.emptyMap(), publisher.controllers());
+        assertEquals(Map.of(), publisher.controllers());
     }
 
     @Test
@@ -60,7 +60,7 @@ public class ControllerRegistrationsPublisherTest {
 
     private static final MetadataImage TEST_IMAGE;
 
-    private static final MetadataProvenance PROVENANCE = new MetadataProvenance(100L, 10, 2000L);
+    private static final MetadataProvenance PROVENANCE = new MetadataProvenance(100L, 10, 2000L, true);
 
     static {
         TEST_DELTA = new MetadataDelta.Builder().build();
@@ -79,7 +79,7 @@ public class ControllerRegistrationsPublisherTest {
         ControllerRegistrationsPublisher publisher = new ControllerRegistrationsPublisher();
         if (fromSnapshot) {
             publisher.onMetadataUpdate(TEST_DELTA, TEST_IMAGE,
-                new SnapshotManifest(new MetadataProvenance(100L, 10, 2000L), 100L));
+                new SnapshotManifest(new MetadataProvenance(100L, 10, 2000L, true), 100L));
         } else {
             publisher.onMetadataUpdate(TEST_DELTA, TEST_IMAGE,
                 LogDeltaManifest.newBuilder().
@@ -91,7 +91,7 @@ public class ControllerRegistrationsPublisherTest {
                     build());
         }
         System.out.println("TEST_IMAGE.cluster = " + TEST_IMAGE.cluster());
-        assertEquals(new HashSet<>(Arrays.asList(0, 1, 2)), publisher.controllers().keySet());
+        assertEquals(new HashSet<>(List.of(0, 1, 2)), publisher.controllers().keySet());
         assertTrue(publisher.controllers().get(0).zkMigrationReady());
         assertFalse(publisher.controllers().get(1).zkMigrationReady());
         assertFalse(publisher.controllers().get(2).zkMigrationReady());
