@@ -18,16 +18,15 @@ package org.apache.kafka.raft;
 
 import org.apache.kafka.common.utils.LogContext;
 import org.apache.kafka.common.utils.MockTime;
-import org.apache.kafka.common.utils.Utils;
-import org.apache.kafka.raft.internals.ReplicaKey;
-import org.apache.kafka.raft.internals.VoterSetTest;
 
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
 
 import java.net.InetSocketAddress;
-import java.util.Collections;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -44,7 +43,7 @@ class ResignedStateTest {
     int localId = 0;
     int epoch = 5;
     Endpoints localEndpoints = Endpoints.fromInetSocketAddresses(
-        Collections.singletonMap(
+        Map.of(
             VoterSetTest.DEFAULT_LISTENER_NAME,
             InetSocketAddress.createUnresolved("localhost", 1234)
         )
@@ -57,7 +56,7 @@ class ResignedStateTest {
             epoch,
             voters,
             electionTimeoutMs,
-            Collections.emptyList(),
+            List.of(),
             localEndpoints,
             logContext
         );
@@ -66,16 +65,16 @@ class ResignedStateTest {
     @Test
     public void testResignedState() {
         int remoteId = 1;
-        Set<Integer> voters = Utils.mkSet(localId, remoteId);
+        Set<Integer> voters = Set.of(localId, remoteId);
 
         ResignedState state = newResignedState(voters);
 
-        assertEquals(ElectionState.withElectedLeader(epoch, localId, voters), state.election());
+        assertEquals(ElectionState.withElectedLeader(epoch, localId, Optional.empty(), voters), state.election());
         assertEquals(epoch, state.epoch());
 
-        assertEquals(Collections.singleton(remoteId), state.unackedVoters());
+        assertEquals(Set.of(remoteId), state.unackedVoters());
         state.acknowledgeResignation(remoteId);
-        assertEquals(Collections.emptySet(), state.unackedVoters());
+        assertEquals(Set.of(), state.unackedVoters());
 
         assertEquals(electionTimeoutMs, state.remainingElectionTimeMs(time.milliseconds()));
         assertFalse(state.hasElectionTimeoutExpired(time.milliseconds()));
@@ -90,20 +89,33 @@ class ResignedStateTest {
     @ParameterizedTest
     @ValueSource(booleans = {true, false})
     public void testGrantVote(boolean isLogUpToDate) {
-        ResignedState state = newResignedState(Utils.mkSet(1, 2, 3));
+        ResignedState state = newResignedState(Set.of(1, 2, 3));
 
-        assertFalse(state.canGrantVote(ReplicaKey.of(1, ReplicaKey.NO_DIRECTORY_ID), isLogUpToDate));
-        assertFalse(state.canGrantVote(ReplicaKey.of(2, ReplicaKey.NO_DIRECTORY_ID), isLogUpToDate));
-        assertFalse(state.canGrantVote(ReplicaKey.of(3, ReplicaKey.NO_DIRECTORY_ID), isLogUpToDate));
+        assertEquals(
+            isLogUpToDate,
+            state.canGrantVote(ReplicaKey.of(1, ReplicaKey.NO_DIRECTORY_ID), isLogUpToDate, true)
+        );
+        assertEquals(
+            isLogUpToDate,
+            state.canGrantVote(ReplicaKey.of(2, ReplicaKey.NO_DIRECTORY_ID), isLogUpToDate, true)
+        );
+        assertEquals(
+            isLogUpToDate,
+            state.canGrantVote(ReplicaKey.of(3, ReplicaKey.NO_DIRECTORY_ID), isLogUpToDate, true)
+        );
+
+        assertFalse(state.canGrantVote(ReplicaKey.of(1, ReplicaKey.NO_DIRECTORY_ID), isLogUpToDate, false));
+        assertFalse(state.canGrantVote(ReplicaKey.of(2, ReplicaKey.NO_DIRECTORY_ID), isLogUpToDate, false));
+        assertFalse(state.canGrantVote(ReplicaKey.of(3, ReplicaKey.NO_DIRECTORY_ID), isLogUpToDate, false));
     }
 
     @Test
     void testNegativeScenarioAcknowledgeResignation() {
-        Set<Integer> voters = Utils.mkSet(0, 1, 2, 3, 4, 5);
+        Set<Integer> voters = Set.of(0, 1, 2, 3, 4, 5);
 
         ResignedState state = newResignedState(voters);
 
-        assertEquals(ElectionState.withElectedLeader(epoch, 0, voters), state.election());
+        assertEquals(ElectionState.withElectedLeader(epoch, 0, Optional.empty(), voters), state.election());
         assertEquals(epoch, state.epoch());
 
         // try non-existed voter must throw an exception
@@ -112,7 +124,7 @@ class ResignedStateTest {
 
     @Test
     void testLeaderEndpoints() {
-        ResignedState state = newResignedState(Utils.mkSet(1, 2, 3));
+        ResignedState state = newResignedState(Set.of(1, 2, 3));
 
         assertEquals(localEndpoints, state.leaderEndpoints());
         assertNotEquals(Endpoints.empty(), state.leaderEndpoints());
